RESOLVED FIXED168099
HTMLConstructionSiteTask::Insert should never be called on a node with a parent
https://bugs.webkit.org/show_bug.cgi?id=168099
Summary HTMLConstructionSiteTask::Insert should never be called on a node with a parent
Ryosuke Niwa
Reported 2017-02-09 19:58:05 PST
Always use InsertAlreadyParsedChild when the node can have a parent.
Attachments
Cleanup (7.79 KB, patch)
2017-02-09 20:09 PST, Ryosuke Niwa
no flags
Ryosuke Niwa
Comment 1 2017-02-09 20:09:40 PST
Ryosuke Niwa
Comment 2 2017-02-10 12:39:29 PST
Comment on attachment 301122 [details] Cleanup Thanks for the review!
WebKit Commit Bot
Comment 3 2017-02-10 13:17:26 PST
Comment on attachment 301122 [details] Cleanup Clearing flags on attachment: 301122 Committed r212140: <http://trac.webkit.org/changeset/212140>
WebKit Commit Bot
Comment 4 2017-02-10 13:17:31 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.